infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: alamindocker/auth
---
apiVersion: v1
kind: Service
metadata:
  name:  auth-clusterip-srv
spec:
  selector:
    app:  auth
  ports:
  - name:  auth
    port:  3003
    targetPort:  3003
