infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: alamindocker/tickets
---
apiVersion: v1
kind: Service
metadata:
  name:  tickets-clusterip-srv
spec:
  selector:
    app:  tickets
  ports:
  - name:  tickets
    port:  3004
    targetPort:  3004
